tests/ok/while-break.ari
fn main() -> i64 {
  var value = 0;
  var total = 0;
  while true {
    value = value + 1;
    if value == 2 {
      continue;
    }
    if value == 5 {
      break;
    }
    total = total + value;
  }
  return total;
}
