tests/errors/operators-bitwise-not-bool.ari
fn main() -> i64 {
  let value = ~true;
  return 0;
}
